build/log/idf_py_stderr_output_129902
/home/awr417h/Projects/esp/my_project/main/main.c: In function 'metrics_get_handler':
/home/awr417h/Projects/esp/my_project/main/main.c:29:24: error: expected ')' before 'co2_ppm'
   29 |                      "" co2_ppm ":%.1f,"
      |                        ^~~~~~~~
      |                        )
/home/awr417h/Projects/esp/my_project/main/main.c:27:21: note: to match this '('
   27 |   int len = snprintf(buf, sizeof(buf),
      |                     ^
/home/awr417h/Projects/esp/my_project/main/main.c:27:22: error: passing argument 1 of 'snprintf' makes pointer from integer without a cast [-Wint-conversion]
   27 |   int len = snprintf(buf, sizeof(buf),
      |                      ^~~
      |                      |
      |                      char
In file included from /home/awr417h/bin/esp/esp-idf-v5.4.3/components/esp_common/include/esp_err.h:10,
                 from /home/awr417h/bin/esp/esp-idf-v5.4.3/components/esp_event/include/esp_event.h:10,
                 from /home/awr417h/Projects/esp/my_project/main/main.c:2:
/home/awr417h/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20250730/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:272:19: note: expected 'char * restrict' but argument is of type 'char'
  272 | int     snprintf (char *__restrict, size_t, const char *__restrict, ...)
      |                   ^
/home/awr417h/Projects/esp/my_project/main/main.c:40:24: error: passing argument 2 of 'httpd_resp_send' makes pointer from integer without a cast [-Wint-conversion]
   40 |   httpd_resp_send(req, buf, len);
      |                        ^~~
      |                        |
      |                        char
In file included from /home/awr417h/Projects/esp/my_project/main/main.c:3:
/home/awr417h/bin/esp/esp-idf-v5.4.3/components/esp_http_server/include/esp_http_server.h:1115:55: note: expected 'const char *' but argument is of type 'char'
 1115 | esp_err_t httpd_resp_send(httpd_req_t *r, const char *buf, ssize_t buf_len);
      |                                           ~~~~~~~~~~~~^~~
/home/awr417h/Projects/esp/my_project/main/main.c:16:17: warning: variable 'm' set but not used [-Wunused-but-set-variable]
   16 |   air_metrics_t m;
      |                 ^
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
